# CombiMatrix.Py

./: .gitignore  README.md  adlink.py  adlinkExample.py  adlink_example.py  app.py  block.py  chip.py  chipcontrol.py  chipmap.py  chiptest.py  config.ini  cv.py  cyclic_voltammetry.py  dask91xx.py  definitions.py  ex_api_misc.py  ex_blfind.py  ex_tech_CP.py  ex_tech_OCV.py  experiment.py  fileio.py  grbl_example.py  init.py  kbio.py  ke6485.py  keithley.py  keithleyExample.py  keithley_example.py  mainwindow.py  outputwave.py  par.py  pcie9101.py  pyproject.toml  robotics.py  technique_fields.py  uifuncs.py  vcfg.py
Lib/: PCI-Dask.lib
Lib/adlink/: PCI-Dask64.lib
blocks/: 4x4.block  5x5.block  5x5b.block  Block8.block  badblock.block  badblock2.block  fat.block  goodbutweirdblock.block  jsonblock.block  test.block  testblock.block
data/: Electrodes.xlsx
data/blocks/: 3x3.block  Arrows.block
data/gcode/: A1.gcode  A2.gcode  A3.gcode  Null.gcode
data/vcfgs/: test.cv.vcfg
database/: db_utils.py
gcode/: Zero.gcode
inc/adlink/: dask91xx.py
inc/kbio/: kbio_api.py  kbio_tech.py  kbio_types.py
kbio/: c_utils.py  kbio_api.py  kbio_tech.py  kbio_types.py  technique_fields.py
outputs/: cv0.csv
resources/: stylesheet.css
tests/: test_combi_create_block.py  test_combi_screen.py
utils/: adlink.py  dask91xx.py  experiment.py  fileio.py  par.py  step.py  ui_utils.py
vcfgs/: test2.cv.vcfg  testca.ca.vcfg  vnew.vcfg  vold.vcfg
view/: app.py  chipselection.py  combi_control.py  create_block.py  create_vcfg.py  debug_window.py  debugwindow.py  electrode_setup.py  electrodesetup.py  experiment_window.py  experimentwindow.py  grid_widget.py  gridwidget.py  mainwindow.py  outputlog.py  robot_window.py  robotwindow.py  setupwindow.py
yonder_interface/: _pyinstaller.py  combi_control.py  create_block.py  create_vcfg.py  electrode_setup.py  experiment_window.py  launch_window.py  robot_window.py
(+18 files in other folders)
