[tool.poetry]
name = "combimatrix-py"
version = "0.1.0"
description = ""
authors = ["combimatrixai-labs <combimatrixailab@gmail.com>"]
readme = "README.md"
packages = [{include = "combimatrix"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
pandas = "^2.2.3"
pyqt6 = "^6.7.1"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.2"
qt-material = "^2.14"
grbl-streamer = "^2.0.2"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
